--- a/style.css
+++ b/style.css
@@ -633,4 +633,13 @@ li {
 
 .carousel::after {
   background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolygon points='100,50 20,100 20,0' fill='%23fff'/%3E%3C/svg%3E");
+}
+
+.actual-steam-site {
+  margin-top: 5.5rem;
+}
+.actual-steam-site h2 {
+  font-size: 2rem;
+  margin-bottom: 2rem;
+  text-align: center;
 }/*# sourceMappingURL=style.css.map */
