--- a/style.scss
+++ b/style.scss
@@ -271,7 +271,6 @@ form.search-bar {
       transition: 0.1s;
       &:focus,
       &:hover {
-        scale: 1.05;
       }
     }
   }
@@ -310,7 +309,9 @@ section.tag-btns {
       object-fit: cover;
     }
     p {
+      margin-top: 0.3rem;
       color: $highlight-color;
+      font-weight: 600;
     }
     &:hover {
       color: red;
@@ -628,8 +629,10 @@ li {
   position: relative;
   flex: 0 0 100%;
   width: 100%;
+  height: 100%;
   background-color: $bg-color;
   counter-increment: item;
+  object-fit: cover;
 }
 
 // .carousel__slide:nth-child(even) {
