--- a/style.css
+++ b/style.css
@@ -619,7 +619,6 @@ li {
 .carousel__next {
   position: absolute;
   top: 50%;
-  opacity: 0.8;
   width: 2.8rem;
   height: 2.8rem;
   transform: translateY(-50%);
@@ -628,20 +627,18 @@ li {
   text-align: center;
   background: url(/icons/Arrow.svg);
   background-repeat: no-repeat;
-  background-size: 25px 25px;
-  background-color: rgba(21, 27, 36, 0.5);
+  background-size: 1rem 1rem;
+  background-color: rgba(21, 27, 36, 0.6);
   background-position: 50%;
-  aspect-ratio: 1;
 }
 
 .carousel__prev {
   background: url(/icons/Arrow.svg);
   background-repeat: no-repeat;
   transform: translateY(-50%);
-  background-size: 25px 25px;
-  background-color: rgba(21, 27, 36, 0.5);
+  background-color: rgba(21, 27, 36, 0.6);
   background-position: 50%;
-  aspect-ratio: 1;
+  background-size: 1rem 1rem;
   rotate: 180deg;
   top: 40%;
 }
