--- a/style.css
+++ b/style.css
@@ -8,13 +8,32 @@
   padding: 0;
 }
 
+::-webkit-scrollbar {
+  height: 2px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #324157;
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
   background: rgb(28, 29, 32);
   background: linear-gradient(90deg, rgb(26, 27, 31) 0%, rgb(12, 12, 20) 48%, rgb(26, 27, 31) 100%);
+  max-width: 414px;
+  width: calc(100% - 3rem);
+  margin-inline: auto;
+  margin: 2rem 0;
 }
 
-img {
+* {
+  margin: 0;
+  padding: 0;
+  font: inherit;
+}
+
+img,
+svg {
   display: block;
   max-width: 100%;
 }
@@ -101,19 +120,6 @@ ul {
   margin: 2rem 0 5rem 0;
 }
 
-body {
-  max-width: 414px;
-  width: calc(100% - 3rem);
-  margin-inline: auto;
-  margin: 2rem 0;
-}
-
-* {
-  margin: 0;
-  padding: 0;
-  font: inherit;
-}
-
 img,
 picture,
 svg,
@@ -181,7 +187,7 @@ header .header__container .header__logo a.logo__text {
   cursor: pointer;
 }
 header .header__container .header__menu .header__menu__image {
-  transition: 0.3s;
+  transition: 0.25s;
   display: block;
 }
 header .header__container .header__menu .header__menu__image:hover, header .header__container .header__menu .header__menu__image:focus {
@@ -258,7 +264,7 @@ section.tag-btns .tag-btn {
   border: 1px solid #283345;
   margin-inline: auto;
   gap: 0.2rem;
-  transition: 0.3s;
+  transition: 0.25s;
   position: relative;
 }
 section.tag-btns .tag-btn img.tag-btn-icon {
@@ -303,7 +309,7 @@ section.game-list .game-list__tabs-container .game-list__tabs .game-list__tabs__
 }
 section.game-list .game-list__tabs-container .game-list__tabs .game-list__tabs__item p:hover, section.game-list .game-list__tabs-container .game-list__tabs .game-list__tabs__item p:focus {
   color: rgba(255, 255, 255, 0.8);
-  transition: 0.3s;
+  transition: 0.25s;
 }
 section.game-list .game-list__tabs-container .game-list__tabs .game-list__tabs__item p.selected {
   background-color: #1c2534;
@@ -317,7 +323,7 @@ section.game-list .game-list__tabs-container .game-list__tabs .game-list__tabs__
   display: grid;
   place-content: center;
   border-radius: 0.1rem;
-  transition: 0.3s;
+  transition: 0.25s;
 }
 section.game-list .game-list__tabs-container .game-list__tabs .game-list__tabs__item div:hover, section.game-list .game-list__tabs-container .game-list__tabs .game-list__tabs__item div:focus {
   opacity: 0.8;
@@ -382,7 +388,7 @@ section.game-list .game-list-container a.game-list__see-more {
   font-size: 1.125rem;
   margin: 0.9rem 0 0.1rem 0;
   font-size: 1.125rem;
-  transition: 0.3s;
+  transition: 0.25s;
 }
 section.game-list .game-list-container a.game-list__see-more:hover, section.game-list .game-list-container a.game-list__see-more:focus {
   opacity: 0.8;
@@ -406,7 +412,7 @@ section.queue .queue__game-container .see-all {
   color: #ffffff;
   z-index: 99999;
   position: absolute;
-  transition: 0.3s ease-in-out;
+  transition: 0.25s ease-in-out;
   inset: 0;
   height: -moz-fit-content;
   height: fit-content;
@@ -482,29 +488,6 @@ body {
   max-width: 37.5rem;
   margin: 0 auto;
   font-family: "Lato", sans-serif;
-}
-
-* {
-  box-sizing: border-box;
-  scrollbar-color: transparent transparent; /* thumb and track color */
-  scrollbar-width: 0px;
-}
-
-*::-webkit-scrollbar {
-  width: 0;
-}
-
-*::-webkit-scrollbar-track {
-  background: transparent;
-}
-
-*::-webkit-scrollbar-thumb {
-  background: transparent;
-  border: none;
-}
-
-* {
-  -ms-overflow-style: none;
 }
 
 ol,
@@ -613,6 +596,12 @@ li {
   border-radius: 50%;
   font-size: 0;
   transition: transform 0.1s;
+}
+
+.scroll {
+  overflow-x: auto;
+  overflow-y: hidden;
+  white-space: nowrap;
 }
 
 .carousel__prev,
