--- a/style.css
+++ b/style.css
@@ -8,6 +8,12 @@
   padding: 0;
 }
 
+.scroll {
+  overflow-x: auto;
+  overflow-y: hidden;
+  white-space: nowrap;
+}
+
 ::-webkit-scrollbar {
   height: 2px;
 }
@@ -245,6 +251,7 @@ form.search-bar button.search-bar__button img.search-bar__button__icon {
      object-fit: contain;
   transition: 0.1s;
 }
+
 section.tag-btns {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -484,6 +491,7 @@ footer .footer__bottom .footer__bottom__copyright {
   color: rgba(255, 255, 255, 0.7);
   font-size: 0.7rem;
 }
+
 body {
   max-width: 37.5rem;
   margin: 0 auto;
@@ -526,16 +534,6 @@ li {
   counter-increment: item;
   -o-object-fit: cover;
      object-fit: cover;
-}
-
-.carousel__slide:before {
-  content: counter(item);
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate3d(-50%, -40%, 70px);
-  color: #ffffff;
-  font-size: 2em;
 }
 
 .carousel__snapper {
@@ -598,26 +596,18 @@ li {
   transition: transform 0.1s;
 }
 
-.scroll {
-  overflow-x: auto;
-  overflow-y: hidden;
-  white-space: nowrap;
-}
-
 .carousel__prev,
 .carousel__next {
   position: absolute;
   top: 50%;
   width: 2.8rem;
-  height: 2.8rem;
-  transform: translateY(-50%);
+  aspect-ratio: 1;
   border-radius: 0.26rem;
   background-position: center center;
   text-align: center;
   background: url(/icons/Arrow.svg);
   background-repeat: no-repeat;
-  background-size: 1rem 1rem;
-  background-color: rgba(21, 27, 36, 0.6);
+  background-size: 1.6rem 1.6rem;
   background-position: 50%;
 }
 
@@ -625,11 +615,17 @@ li {
   background: url(/icons/Arrow.svg);
   background-repeat: no-repeat;
   transform: translateY(-50%);
-  background-color: rgba(21, 27, 36, 0.6);
   background-position: 50%;
-  background-size: 1rem 1rem;
+  background-size: 1.2rem 1.2rem;
   rotate: 180deg;
+  background-color: rgba(21, 27, 36, 0.3);
   top: 40%;
+}
+
+.carousel__next {
+  background-size: 1.2rem 1.2rem;
+  transform: translateY(-50%);
+  background-color: rgba(21, 27, 36, 0.3);
 }
 
 .carousel::before,
@@ -640,25 +636,6 @@ li {
 .carousel::after,
 .carousel__next {
   right: 2rem;
-}
-
-.carousel::before,
-.carousel::after {
-  content: "";
-  z-index: 1;
-  background-color: transparent;
-  background-size: 1.5rem 1.5rem;
-  background-repeat: no-repeat;
-  color: #ffffff;
-  pointer-events: none;
-}
-
-.carousel::before {
-  background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolygon points='0,50 80,100 80,0' fill='%23fff'/%3E%3C/svg%3E");
-}
-
-.carousel::after {
-  background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolygon points='100,50 20,100 20,0' fill='%23fff'/%3E%3C/svg%3E");
 }
 
 .actual-steam-site {
