--- a/style.scss
+++ b/style.scss
@@ -6,35 +6,39 @@ $darker-color: #283345;
 $box-color: #1b232f;
 $focal-color: #324157;
 $light-color: #ffffff;
+$button-color: $darker-color;
 $card-bg-color: #252f40;
 $game-list-bg: #1a2230;
 $game-list-bg: #1c2534;
+$slider-arrow-bg: rgba(
+  $color: $bg-color,
+  $alpha: 0.3,
+);
+// Hover
+$hover-transition-time: 0.25s;
+$hover-opacity: 0.8;
+$hover-opacity-high: 0.92;
+
+// background
+$transparent-button-color: rgba(
+  $color: $darker-color,
+  $alpha: $hover-opacity-high,
+);
+
+// Gradient
 $page-bg: linear-gradient(
   90deg,
   rgba(26, 27, 31, 1) 0%,
   rgba(12, 12, 20, 1) 48%,
   rgba(26, 27, 31, 1) 100%
 );
+
 $header-bg: linear-gradient(
   349deg,
   rgb(30 42 59) 0%,
   rgb(18 26 38) 100%,
   rgb(9 13 19) 100%
 );
-$transparent-button-color: rgba(
-  $color: $darker-color,
-  $alpha: $hover-opacity-high,
-);
-$button-color: rgba(
-  $color: $darker-color,
-  $alpha: 1,
-);
-
-// Hover
-$hover-transition-time: 0.25s;
-$hover-opacity: 0.8;
-$hover-opacity-high: 0.92;
-
 // Font size
 $font-legal: 0.7rem;
 $font-xs: 0.9rem;
@@ -304,9 +308,6 @@ form.search-bar {
       aspect-ratio: 1;
       object-fit: contain;
       transition: 0.1s;
-      &:focus,
-      &:hover {
-      }
     }
   }
 }
@@ -487,10 +488,7 @@ section.queue {
       color: $light-color;
       z-index: 99999;
       position: absolute;
-      // top: 50%;
-      // left: 50%;
       transition: $hover-transition-time ease-in-out;
-      // transform: translate(-50%, -50%);
       inset: 0;
       height: fit-content;
       width: fit-content;
@@ -562,8 +560,6 @@ footer {
       color: rgba($color: $light-color, $alpha: 0.7);
       font-size: $font-legal;
     }
-    .footer__bottom__img {
-    }
   }
 }
 
@@ -608,20 +604,6 @@ li {
   background-color: $bg-color;
   counter-increment: item;
   object-fit: cover;
-}
-
-// .carousel__slide:nth-child(even) {
-//   background-color: #99f;
-// }
-
-.carousel__slide:before {
-  content: counter(item);
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate3d(-50%, -40%, 70px);
-  color: $light-color;
-  font-size: 2em;
 }
 
 .carousel__snapper {
@@ -679,7 +661,6 @@ li {
   display: inline-block;
   width: 1.5rem;
   height: 1.5rem;
-  // background-color: #333;
   background-clip: content-box;
   border: 0.25rem solid transparent;
   border-radius: 50%;
@@ -692,15 +673,13 @@ li {
   position: absolute;
   top: 50%;
   width: 2.8rem;
-  height: 2.8rem;
-  transform: translateY(-50%);
+  aspect-ratio: 1;
   border-radius: 0.26rem;
   background-position: center center;
   text-align: center;
   background: url(/icons/Arrow.svg);
   background-repeat: no-repeat;
-  background-size: 1rem 1rem;
-  background-color: rgba($color: $bg-color, $alpha: 0.6);
+  background-size: 1.6rem 1.6rem;
   background-position: 50%;
 }
 
@@ -708,13 +687,16 @@ li {
   background: url(/icons/Arrow.svg);
   background-repeat: no-repeat;
   transform: translateY(-50%);
-  background-color: rgba($color: $bg-color, $alpha: 0.6);
   background-position: 50%;
-  background-size: 1rem 1rem;
+  background-size: 1.2rem 1.2rem;
   rotate: 180deg;
+  background-color: $slider-arrow-bg;
   top: 40%;
 }
 .carousel__next {
+  background-size: 1.2rem 1.2rem;
+  transform: translateY(-50%);
+  background-color: $slider-arrow-bg;
 }
 
 .carousel::before,
@@ -726,31 +708,9 @@ li {
 .carousel__next {
   right: $space-200;
 }
-
-.carousel::before,
-.carousel::after {
-  content: "";
-  z-index: 1;
-  background-color: transparent;
-  background-size: 1.5rem 1.5rem;
-  background-repeat: no-repeat;
-  color: $light-color;
-  // font-size: 2.2rem;
-  // line-height: 4rem;
-  // text-align: center;
-  pointer-events: none;
-}
-
-.carousel::before {
-  background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolygon points='0,50 80,100 80,0' fill='%23fff'/%3E%3C/svg%3E");
-}
-
-.carousel::after {
-  background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolygon points='100,50 20,100 20,0' fill='%23fff'/%3E%3C/svg%3E");
-}
+////
 
 .actual-steam-site {
-  // width: 400%;
   margin: 2rem 0;
   h2 {
     font-size: $font-lg;
