--- a/style.css
+++ b/style.css
@@ -298,6 +298,11 @@ section.tag-btns .tag-btn:hover {
   background-color: rgba(40, 51, 69, 0.8);
 }
 
+.selected {
+  background-color: #1c2534;
+  border-radius: 0.4em 0.4em 0 0;
+}
+
 section.game-list {
   width: calc(100% - 3rem);
   margin-inline: auto;
@@ -309,6 +314,8 @@ section.game-list .game-list__tabs-container .game-list__tabs {
   align-items: center;
 }
 section.game-list .game-list__tabs-container .game-list__tabs .game-list__tabs__item p {
+  display: grid;
+  place-content: center;
   font-size: 1.125rem;
   padding: 0.5rem 2rem;
   cursor: pointer;
@@ -466,7 +473,8 @@ footer {
 footer .footer-container {
   display: flex;
   justify-content: center;
-  flex-wrap: wrap;
+  align-items: center;
+  flex-direction: column;
   margin-inline: auto;
   width: 100%;
   text-align: center;
