--- a/style.scss
+++ b/style.scss
@@ -88,6 +88,18 @@ $project-width: calc(100% - (2 * $project-padding));
   background: $focal-color;
 }
 //////////
+// VISUALLY HIDDEN
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  border: 0;
+}
+////////
 
 body {
   font-family: Arial, Helvetica, sans-serif;
@@ -254,7 +266,7 @@ header {
         width: 150px;
         aspect-ratio: 1;
       }
-      a.logo__text {
+      a.logo__link {
         cursor: pointer;
       }
     }
@@ -269,6 +281,18 @@ header {
         &.hide {
           display: none;
         }
+      }
+      .header__menu__button {
+        position: relative;
+        background: transparent;
+        border: none;
+        padding: 0;
+        cursor: pointer;
+        font-size: 0; /* Hide text content */
+      }
+
+      .header__menu__button:focus {
+        outline: none; /* Remove outline on focus for better visual appearance */
       }
     }
   }
@@ -365,6 +389,7 @@ section.tag-btns {
   background-color: $game-list-bg;
   border-radius: $border-lg $border-lg 0 0;
 }
+
 section.game-list {
   width: $project-width;
   margin-inline: auto;
@@ -422,7 +447,7 @@ section.game-list {
     .game-list-container__games {
       display: flex;
       flex-direction: column;
-      gap: 0.7rem;
+      gap: 0.5rem;
       margin-bottom: $space-200;
       padding-right: 0;
       .game-list__card {
@@ -542,22 +567,25 @@ footer {
   margin-top: 3rem;
   width: $project-width;
   margin-inline: auto;
+
   .footer-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    margin-inline: auto;
-    width: 100%;
-    text-align: center;
-    gap: 0.5rem;
-    ul {
+    .footer__links {
       display: flex;
-      white-space: nowrap;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      margin-inline: auto;
+      width: 100%;
+      text-align: center;
       gap: 0.5rem;
-      li {
-        a {
-          margin-right: 0.5rem;
+      ul {
+        display: flex;
+        white-space: nowrap;
+        gap: 0.5rem;
+        li {
+          a {
+            margin-right: 0.5rem;
+          }
         }
       }
     }
